--- a/package.json
+++ b/package.json
@@ -10,8 +10,19 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.10",
     "react": "16.13.1",
     "react-native": "0.63.3",
+    "react-native-chart-kit": "^6.6.1",
+    "react-native-circular-progress": "^1.3.6",
+    "react-native-gesture-handler": "^1.8.0",
+    "react-native-loading-spinner-overlay": "^1.1.0",
+    "react-native-reanimated": "^1.13.1",
+    "react-native-safe-area-context": "^3.1.8",
+    "react-native-screens": "^2.11.0",
+    "react-native-svg": "^12.1.0",
+    "react-navigation": "^4.4.2",
+    "react-navigation-stack": "^2.8.4",
     "rn-apple-healthkit": "^0.8.0"
   },
   "devDependencies": {
